--- a/templatemo_569_edu_meeting/assets/css/signin.css
+++ b/templatemo_569_edu_meeting/assets/css/signin.css
@@ -24,6 +24,13 @@ body {
   padding: 15px;
   margin: 0 auto;
 }
+
+.form-signin .mb-4{
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
 .form-signin .checkbox {
   font-weight: 400;
 }
