update login, register and payment
insert head for sync

--- a/templatemo_569_edu_meeting/assets/css/signin.css
+++ b/templatemo_569_edu_meeting/assets/css/signin.css
@@ -19,6 +19,15 @@ body {
 }
 
 .form-signin {
+
+  
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+
+.form-signin .banner_main .left{
   width: 100%;
   max-width: 330px;
   padding: 15px;
