--- a/edu_meeting/views/index.hbs
+++ b/edu_meeting/views/index.hbs
@@ -116,13 +116,13 @@
                   <div class="price">
                     <span>$22.00</span>
                   </div>
-                  <a href="meeting-details"><img src="assets/images/meeting-01.jpg" alt="New Lecturer Meeting"></a>
+                  <a href="meeting_details"><img src="assets/images/meeting-01.jpg" alt="New Lecturer Meeting"></a>
                 </div>
                 <div class="down-content">
                   <div class="date">
                     <h6>Nov <span>10</span></h6>
                   </div>
-                  <a href="meeting-details"><h4>New Lecturers Meeting</h4></a>
+                  <a href="meeting_details"><h4>New Lecturers Meeting</h4></a>
                   <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
                 </div>
               </div>
@@ -133,13 +133,13 @@
                   <div class="price">
                     <span>$36.00</span>
                   </div>
-                  <a href="meeting-details"><img src="assets/images/meeting-02.jpg" alt="Online Teaching"></a>
+                  <a href="meeting_details"><img src="assets/images/meeting-02.jpg" alt="Online Teaching"></a>
                 </div>
                 <div class="down-content">
                   <div class="date">
                     <h6>Nov <span>24</span></h6>
                   </div>
-                  <a href="meeting-details"><h4>Online Teaching Techniques</h4></a>
+                  <a href="meeting_details"><h4>Online Teaching Techniques</h4></a>
                   <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
                 </div>
               </div>
@@ -150,13 +150,13 @@
                   <div class="price">
                     <span>$14.00</span>
                   </div>
-                  <a href="meeting-details"><img src="assets/images/meeting-03.jpg" alt="Higher Education"></a>
+                  <a href="meeting_details"><img src="assets/images/meeting-03.jpg" alt="Higher Education"></a>
                 </div>
                 <div class="down-content">
                   <div class="date">
                     <h6>Nov <span>26</span></h6>
                   </div>
-                  <a href="meeting-details"><h4>Higher Education Conference</h4></a>
+                  <a href="meeting_details"><h4>Higher Education Conference</h4></a>
                   <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
                 </div>
               </div>
@@ -167,13 +167,13 @@
                   <div class="price">
                     <span>$48.00</span>
                   </div>
-                  <a href="meeting-details"><img src="assets/images/meeting-04.jpg" alt="Student Training"></a>
+                  <a href="meeting_details"><img src="assets/images/meeting-04.jpg" alt="Student Training"></a>
                 </div>
                 <div class="down-content">
                   <div class="date">
                     <h6>Nov <span>30</span></h6>
                   </div>
-                  <a href="meeting-details"><h4>Student Training Meetup</h4></a>
+                  <a href="meeting_details"><h4>Student Training Meetup</h4></a>
                   <p>Morbi in libero blandit lectus<br>cursus ullamcorper.</p>
                 </div>
               </div>
