--- a/edu_meeting/views/courses/course_details.hbs
+++ b/edu_meeting/views/courses/course_details.hbs
@@ -20,11 +20,15 @@
                                 </a>
                                 <p> 282/4A Bùi Hữu Nghĩa, P2, Q Bình Thạnh</p>
                                 <p class="description">
-                                    On this course from the Raspberry Pi Foundation, you’ll first build a website using HTML, style it with CSS, and then make it interactive using JavaScript.
+                                    On this course from the Raspberry Pi Foundation, you’ll first build a website using
+                                    HTML, style it with CSS, and then make it interactive using JavaScript.
 
-Along the way you’ll learn about the box model, which describes how websites are laid out by browsers, and about the Document Object Model, which your JavaScript code will interact with to dynamically change your web pages.
+                                    Along the way you’ll learn about the box model, which describes how websites are
+                                    laid out by browsers, and about the Document Object Model, which your JavaScript
+                                    code will interact with to dynamically change your web pages.
 
-In the final week, you’ll design and create a quiz web page and demonstrate your new skills by making your own website.
+                                    In the final week, you’ll design and create a quiz web page and demonstrate your new
+                                    skills by making your own website.
                                 </p>
                                 <div class="row">
                                     <div class="col-lg-4">
@@ -63,18 +67,18 @@ In the final week, you’ll design and create a quiz web page and demonstrate yo
                             </div>
                         </div>
                     </div>
-                     <div class="col-lg-12">
-              <div class="main-button-red">
-                <a href="meetings">Back To Courses List</a>
-              </div>
-              <div class="col-lg-12">
-              <div class="main-button-red">
-                <a href="payment1.html">Pay</a>
-              </div>
+                    <div class="col-lg-12">
+                        <div class="main-button-red">
+                            <a href="meetings">Back To Courses List</a>
+                        </div>
+                        <div class="col-lg-12">
+                            <div class="main-button-red">
+                                <a href="payment">Pay</a>
+                            </div>
 
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
 
 </section>
