--- a/edu_meeting/views/meetings/meeting_details.hbs
+++ b/edu_meeting/views/meetings/meeting_details.hbs
@@ -75,7 +75,7 @@
               </div>
               <div class="col-lg-12">
               <div class="main-button-red">
-                <a href="payment">Pay</a>
+                <a href="payment1.html">Pay</a>
               </div>
           </div>
         </div>
