--- a/edu_meeting/views/payment/payment.hbs
+++ b/edu_meeting/views/payment/payment.hbs
@@ -1,162 +1,158 @@
-+<!doctype html>
-                        <html>
-                            <head>
-                                <meta charset='utf-8'>
-                                <meta name='viewport' content='width=device-width, initial-scale=1'>
-                                <title>Snippet - BBBootstrap</title>
-                                <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css' rel='stylesheet'>
-                                <link href='https://use.fontawesome.com/releases/v5.7.2/css/all.css' rel='stylesheet'>
-                                <script type='text/javascript' src=''></script>
-                                <style>@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Work+Sans:wght@800&display=swap');
++
+<link href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css' rel='stylesheet'>
+<link href='https://use.fontawesome.com/releases/v5.7.2/css/all.css' rel='stylesheet'>
+<script type='text/javascript' src=''></script>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Work+Sans:wght@800&display=swap');
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box
-}
+    * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box
+    }
 
-.payment {
-    margin: 0;
-    padding: 15px;
-    background-image: url("assets/images/payment_background.jpg");
-    background-repeat: no-repeat;
-    background-size: cover; 
-}
+    .payment {
+        margin: 0;
+        padding: 15px;
+        background-image: url("assets/images/payment_background.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
 
-.container {
-    margin: 20px auto;
-    max-width: 1000px;
-    background-color: white;
-    opacity: .9;
-   
-}
+    .container {
+        margin: 20px auto;
+        max-width: 1000px;
+        background-color: white;
+        opacity: .9;
 
-.form-control {
-    height: 25px;
-    width: 150px;
-    border: none;
-    border-radius: 0;
-    font-weight: 800;
-    padding: 0 0 5px 0;
-    background-color: transparent;
-    box-shadow: none;
-    outline: none;
-    border-bottom: 2px solid #ccc;
-    margin: 0;
-    font-size: 14px
-}
+    }
 
-.form-control:focus {
-    box-shadow: none;
-    border-bottom: 2px solid #ccc;
-    background-color: transparent
-}
+    .form-control {
+        height: 25px;
+        width: 150px;
+        border: none;
+        border-radius: 0;
+        font-weight: 800;
+        padding: 0 0 5px 0;
+        background-color: transparent;
+        box-shadow: none;
+        outline: none;
+        border-bottom: 2px solid #ccc;
+        margin: 0;
+        font-size: 14px
+    }
 
-.form-control2 {
-    font-size: 14px;
-    height: 20px;
-    width: 55px;
-    border: none;
-    border-radius: 0;
-    font-weight: 800;
-    padding: 0 0 5px 0;
-    background-color: transparent;
-    box-shadow: none;
-    outline: none;
-    border-bottom: 2px solid #ccc;
-    margin: 0
-}
+    .form-control:focus {
+        box-shadow: none;
+        border-bottom: 2px solid #ccc;
+        background-color: transparent
+    }
 
-.form-control2:focus {
-    box-shadow: none;
-    border-bottom: 2px solid #ccc;
-    background-color: transparent
-}
+    .form-control2 {
+        font-size: 14px;
+        height: 20px;
+        width: 55px;
+        border: none;
+        border-radius: 0;
+        font-weight: 800;
+        padding: 0 0 5px 0;
+        background-color: transparent;
+        box-shadow: none;
+        outline: none;
+        border-bottom: 2px solid #ccc;
+        margin: 0
+    }
 
-.form-control3 {
-    font-size: 14px;
-    height: 20px;
-    width: 30px;
-    border: none;
-    border-radius: 0;
-    font-weight: 800;
-    padding: 0 0 5px 0;
-    background-color: transparent;
-    box-shadow: none;
-    outline: none;
-    border-bottom: 2px solid #ccc;
-    margin: 0
-}
+    .form-control2:focus {
+        box-shadow: none;
+        border-bottom: 2px solid #ccc;
+        background-color: transparent
+    }
 
-.form-control3:focus {
-    box-shadow: none;
-    border-bottom: 2px solid #ccc;
-    background-color: transparent
-}
+    .form-control3 {
+        font-size: 14px;
+        height: 20px;
+        width: 30px;
+        border: none;
+        border-radius: 0;
+        font-weight: 800;
+        padding: 0 0 5px 0;
+        background-color: transparent;
+        box-shadow: none;
+        outline: none;
+        border-bottom: 2px solid #ccc;
+        margin: 0
+    }
 
-p {
-    margin: 0
-}
+    .form-control3:focus {
+        box-shadow: none;
+        border-bottom: 2px solid #ccc;
+        background-color: transparent
+    }
 
-img {
-    width: 100%;
-    height: 100%;
-    object-fit: fill
-}
+    p {
+        margin: 0
+    }
 
-.text-muted {
-    font-size: 10px
-}
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: fill
+    }
 
-.textmuted {
-    color: #6c757d;
-    font-size: 13px
-}
+    .text-muted {
+        font-size: 10px
+    }
 
-.fs-14 {
-    font-size: 14px
-}
+    .textmuted {
+        color: #6c757d;
+        font-size: 13px
+    }
 
-.btn.btn-primary {
-    width: 100%;
-    height: 55px;
-    border-radius: 0;
-    padding: 13px 0;
-    background-color: black;
-    border: none;
-    font-weight: 600
-}
+    .fs-14 {
+        font-size: 14px
+    }
 
-.btn.btn-primary:hover .fas {
-    transform: translateX(10px);
-    transition: transform 0.5s ease
-}
+    .btn.btn-primary {
+        width: 100%;
+        height: 55px;
+        border-radius: 0;
+        padding: 13px 0;
+        background-color: black;
+        border: none;
+        font-weight: 600
+    }
 
-.fw-900 {
-    font-weight: 900
-}
+    .btn.btn-primary:hover .fas {
+        transform: translateX(10px);
+        transition: transform 0.5s ease
+    }
 
-::placeholder {
-    font-size: 12px
-}
+    .fw-900 {
+        font-weight: 900
+    }
 
-.ps-30 {
-    padding-left: 30px
-}
+    ::placeholder {
+        font-size: 12px
+    }
 
-.h4 {
-    font-family: 'Work Sans', sans-serif !important;
-    font-weight: 800 !important
-}
+    .ps-30 {
+        padding-left: 30px
+    }
 
-.textmuted,
-h5,
-.text-muted {
-    font-family: 'Poppins', sans-serif
-}
+    .h4 {
+        font-family: 'Work Sans', sans-serif !important;
+        font-weight: 800 !important
+    }
+
+    .textmuted,
+    h5,
+    .text-muted {
+        font-family: 'Poppins', sans-serif
+    }
 </style>
-</head>
-<body oncontextmenu='return false' class='snippet-body'>
+
+
     <div class="payment">
         <div class="container">
             <div class="row m-0">
@@ -195,7 +191,8 @@ h5,
                     <div class="row m-0">
                         <div class="col-12 px-4">
                             <div class="d-flex align-items-end mt-4 mb-2">
-                                <p class="h4 m-0"><span class="pe-1">ZAZ</span><span class="pe-1">966</span><span class="pe-1">B</span></p>
+                                <p class="h4 m-0"><span class="pe-1">ZAZ</span><span class="pe-1">966</span><span
+                                        class="pe-1">B</span></p>
                                 <P class="ps-3 textmuted">1L</P>
                             </div>
                             <div class="d-flex justify-content-between mb-2">
@@ -206,14 +203,16 @@ h5,
                                 <p class="textmuted">Subtotal</p>
                                 <p class="fs-14 fw-bold"><span class="fas fa-dollar-sign pe-1"></span>1,450</p>
                             </div>
-                            
+
                             <div class="d-flex justify-content-between mb-2">
                                 <p class="textmuted">Promo code</p>
                                 <p class="fs-14 fw-bold">-<span class="fas fa-dollar-sign px-1"></span>100</p>
                             </div>
                             <div class="d-flex justify-content-between mb-3">
                                 <p class="textmuted fw-bold">Total</p>
-                                <div class="d-flex align-text-top "> <span class="fas fa-dollar-sign mt-1 pe-1 fs-14 "></span><span class="h4">1,350</span> </div>
+                                <div class="d-flex align-text-top "> <span
+                                        class="fas fa-dollar-sign mt-1 pe-1 fs-14 "></span><span class="h4">1,350</span>
+                                </div>
                             </div>
                         </div>
                         <div class="col-12 px-0">
@@ -223,24 +222,30 @@ h5,
                                 </div>
                                 <div class="col-12 px-4">
                                     <div class="d-flex mb-4"> <span class="">
-                                            <p class="text-muted">Card number</p> <input class="form-control" type="text" value="4485 6888 2359 1498" placeholder="1234 5678 9012 3456">
+                                            <p class="text-muted">Card number</p> <input class="form-control"
+                                                type="text" value="4485 6888 2359 1498"
+                                                placeholder="1234 5678 9012 3456">
                                         </span>
                                         <div class=" w-100 d-flex flex-column align-items-end">
-                                            <p class="text-muted">Expires</p> <input class="form-control2" type="text" value="01/2020" placeholder="MM/YYYY">
+                                            <p class="text-muted">Expires</p> <input class="form-control2" type="text"
+                                                value="01/2020" placeholder="MM/YYYY">
                                         </div>
                                     </div>
                                     <div class="d-flex mb-5"> <span class="me-5">
-                                            <p class="text-muted">Cardholder name</p> <input class="form-control" type="text" value="David J.Frias" placeholder="Name">
+                                            <p class="text-muted">Cardholder name</p> <input class="form-control"
+                                                type="text" value="David J.Frias" placeholder="Name">
                                         </span>
                                         <div class="w-100 d-flex flex-column align-items-end">
-                                            <p class="text-muted">CVC</p> <input class="form-control3" type="text" value="630" placeholder="XXX">
+                                            <p class="text-muted">CVC</p> <input class="form-control3" type="text"
+                                                value="630" placeholder="XXX">
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="row m-0">
                                 <div class="col-12 mb-4 p-0">
-                                    <div class="btn btn-primary">Purchase<span class="fas fa-arrow-right ps-2"></span> </div>
+                                    <div class="btn btn-primary">Purchase<span class="fas fa-arrow-right ps-2"></span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -250,7 +255,6 @@ h5,
         </div>
     </div>
 
-                                <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js'></script>
-                                <script type='text/javascript'></script>
-                                </body>
-                            </html>
+    <script type='text/javascript'
+        src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js'></script>
+    <script type='text/javascript'></script>
