--- a/edu_meeting/views/courses/course_details.hbs
+++ b/edu_meeting/views/courses/course_details.hbs
@@ -69,7 +69,7 @@
                     </div>
                     <div class="col-lg-12">
                         <div class="main-button-red">
-                            <a href="meetings">Back To Courses List</a>
+                            <a href="courses">Back To Courses List</a>
                         </div>
                         <div class="col-lg-12">
                             <div class="main-button-red">
